# stableDiffusionApp

./: .gitignore  App.js  App.tsx  Makefile  README.md  app.json  babel.config.js  docker-compose.yml  gluestack-style.config.ts  package-lock.json  package.json  tsconfig.json
api/: Dockerfile  pyproject.toml
api/src/: routes.py  server.py
app/: _layout.tsx  index.tsx
app/(app)/: _layout.tsx  index.tsx  modal.tsx  register.tsx
app/counter/: _layout.tsx  index.tsx
app/tabs/: _layout.tsx  tabOne.tsx
app/tabs/list/: _layout.tsx
client/: Dockerfile  babel.config.js  gluestack-style.config.ts  package.json
client/app/: [...unmatched].tsx  _layout.tsx  index.tsx
client/app/(app)/: _layout.tsx  index.tsx  modal.tsx  register.tsx
client/app/counter/: _layout.tsx  index.tsx
client/app/tabs/: tabOne.tsx  tabTwo.tsx
client/app/tabs/list/: [id].tsx  index.tsx
client/components/base/: FlexView.tsx
client/context/: FontsWrapper.tsx  storeWrapper.tsx
client/hooks/: reduxHooks.ts  useFonts.ts
hooks/: reduxHooks.ts  useFonts.ts
reducers/counter/: counterSlice.ts
store/: store.ts  storeWrapper.tsx
