[tool.poetry]
name = "ai-video-editor-api"
version = "1"
description = "Backend API for AI video editing"
authors = ["tcanbolat"]
repository = "https://github.com/tcanbolat/stableDiffusionApp"

[tool.poetry.dependencies]
python = "^3.9.6"
sanic = "^23.6"
asyncpg = "^0.28.0"
sanic-cors = "^2.2.0"
secure = "^0.2.1"
orjson = "^3.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "23.7.0"
importlib_metadata = "6.8.0"

[tool.black]
line-length = 88
target-version = ['py36']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
